# vexy-pdfsvgpy

./: .gitignore  .mad-logs.jsonl  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  IDEA.md  README.md  SPEC.md  TODO.md  WORK.md  pyproject.toml  test.sh  update_cli.py  update_cli_options.py  update_cli_textas.py  update_dispatch.py  update_init.py  update_init_logic.py  update_pymupdf_backend.py  update_pyproject.py  update_types.py
.omc/: project-memory.json
.omc/sessions/: 03fccfee-c463-4c12-b997-84a2b8d60bc3.json  3683a0d4-4fe1-43fa-b1e7-dd4a0cfc921c.json  3bd202f6-d6fc-417d-8320-0fd0b6c63a80.json  48277cb6-aa16-458a-9120-07d7acfd8c4c.json  a7139b99-d297-4ecc-a534-c09bb0f12571.json
.omc/state/: subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-14T08-53-40-919Z.json
.swarm/: context.md  doc-manifest.json  telemetry.jsonl
.swarm/session/: state.json
examples/: convert_coupon.py  layer_stack.py  regularize_batch.py  trace_logo.py
issues/: 101.md  103.md  105.md  106.md  107.md  108.md  CLAUDE.md
src/vexy_pdfsvgpy/: __init__.py  __main__.py  cli.py  dispatch.py  document.py  errors.py  paths.py  pipeline.py  types.py
tests/: test_cli.py  test_convert.py  test_dispatch.py  test_document.py  test_paths.py  test_pipeline.py  test_smoke.py  test_types.py
tests/backends/: test_apple_backend.py  test_pdfium_backend.py  test_pikepdf_backend.py  test_pymupdf_backend.py  test_pypdf_backend.py  test_resvg_backend.py  test_vtracer_backend.py  test_wrap_backend.py
tests/operations/: test_color.py  test_regularize.py  test_reshape.py  test_sizecrop.py
(+16 files in other folders)
